now we authenticate the user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         </li>
       </ul>
     </nav>
-    
+
     <%= yield %>
     <!-- Footer -->
     <footer>
@@ -51,7 +51,7 @@
             <p>3481 Melrose Place
               <br>Beverly Hills, CA 90210</p>
             <hr class="small">
-            <p class="text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="text-muted" id="copyright-text">Copyright &copy; Your Website 2017</p>
           </div>
         </div>
       </div>
