--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
-
+@import "*";
 
 html, body {
   width: 100%;
@@ -163,6 +163,7 @@ hr.small {
 
 .about {
   padding: 50px 0;
+  background-color: white;
 }
 
 
@@ -195,6 +196,7 @@ hr.small {
 
 .portfolio {
   padding: 50px 0;
+  background-color: white;
 }
 
 .portfolio-item {
@@ -242,6 +244,7 @@ hr.small {
 
 footer {
   padding: 50px 0;
+  background-color: white;
 }
 
 #to-top {
