--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,8 +1,8 @@
   <!-- Header -->
   <header class="header" id="top">
     <div class="text-vertical-center">
-      <h1>Start Bootstrap</h1>
-      <h3>Free Bootstrap Themes &amp; Templates</h3>
+      <h1>ClassRoom Help</h1>
+      <h3>Uniandes</h3>
       <br>
       <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
     </div>
