--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
           </li>
         <%- else %>
           <li>
+            <%= link_to "Start Learning", subject_index_path , class: "js-scroll-trigger"%>
+          </li>
+          <li>
             <%= link_to "Log Out", destroy_user_session_path , class: "js-scroll-trigger", :method => :delete  %>
           </li>
         <% end -%>
