--- a/app/assets/stylesheets/subject.scss
+++ b/app/assets/stylesheets/subject.scss
@@ -24,3 +24,93 @@
     }
   }
 }
+
+.subject-topic-container {
+
+  a:hover {
+ text-decoration:none;
+}
+
+    body {
+    color: #435757;
+    font: 500 1.2em/1.2 'Roboto', sans-serif;
+    }
+
+  .container {
+    max-width: 450px;
+    margin: 0 auto;
+    border-top: 5px solid #435757;
+    background-color: rgba(255, 255, 255, .2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+
+  .items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 20px;
+    counter-reset: done-items undone-items;
+  }
+
+  .done {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
+  .done::after {
+    content: ' (' counter(done-items) ')';
+  }
+
+  .undone {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+
+  .undone::after {
+    content: ' (' counter(undone-items) ')';
+  }
+
+  label {
+    display: block;
+    position: relative;
+    padding: 15px 0 15px 45px;
+    border-top: 1px dashed #fff;
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    cursor: pointer;
+    -webkit-animation: undone .5s;
+            animation: undone .5s;
+  }
+
+  label::before {
+    content: '\f10c'; /* circle outline */
+    display: block;
+    position: absolute;
+    top: 11px;
+    left: 10px;
+    font: 1.5em 'FontAwesome';
+  }
+
+  label:hover, input:focus + label {
+    background-color: rgba(200, 200, 200, .2);
+  }
+
+  input:checked + label {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -webkit-animation: done .5s;
+            animation: done .5s;
+  }
+}
