--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,19 +1,21 @@
   <!-- Header -->
   <header class="header" id="top">
     <div class="text-vertical-center">
-      <h1>ClassRoom Help</h1>
-      <h3>Uniandes</h3>
+      <h1  style="color: white ">ClassRoom Help</h1>
+      <h3  style="color: white">Uniandes</h3>
       <br>
-      <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
+      <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger"  >Find Out More</a>
     </div>
   </header>
 
   <!-- About -->
   <section id="about" class="about">
     <div class="container text-center">
-      <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-      <p class="lead">This theme features some wonderful photography courtesy of
-        <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+      <h2> Bienvenidos a nuestra plataforma </h2>
+      <p class="lead"> 
+        No pierdas mas tiempo y comienza a estudiar
+        <a target="_blank" href="/users/sign_in">Log in.</a> 
+      </p>
     </div>
     <!-- /.container -->
   </section>
@@ -22,7 +24,7 @@
   <section id="services" class="services bg-primary text-white">
     <div class="container">
       <div class="row text-center">
-          <h2>Our Services</h2>
+          <h2>Navegacion rapida</h2>
           <hr class="small">
           <div class="row">
             <div class="col-md-3 col-sm-6">
@@ -32,9 +34,9 @@
                   <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                 </span>
                 <h4>
-                  <strong>Service Name</strong>
+                  <strong>Nuestro equipo</strong>
                 </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>.</p>
                 <a href="#" class="btn btn-light">Learn More</a>
               </div>
             </div>
@@ -45,9 +47,9 @@
                   <i class="fa fa-compass fa-stack-1x text-primary"></i>
                 </span>
                 <h4>
-                  <strong>Service Name</strong>
+                  <strong>Quienes somos</strong>
                 </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>.</p>
                 <a href="#" class="btn btn-light">Learn More</a>
               </div>
             </div>
@@ -58,9 +60,9 @@
                   <i class="fa fa-flask fa-stack-1x text-primary"></i>
                 </span>
                 <h4>
-                  <strong>Service Name</strong>
+                  <strong>Que materias manejamos</strong>
                 </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>.</p>
                 <a href="#" class="btn btn-light">Learn More</a>
               </div>
             </div>
@@ -71,9 +73,9 @@
                   <i class="fa fa-shield fa-stack-1x text-primary"></i>
                 </span>
                 <h4>
-                  <strong>Service Name</strong>
+                  <strong>usuarios</strong>
                 </h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>.</p>
                 <a href="#" class="btn btn-light">Learn More</a>
               </div>
             </div>
@@ -88,7 +90,7 @@
   <!-- Callout -->
   <aside class="callout">
     <div class="text-vertical-center">
-      <h1>Vertically Centered Text</h1>
+      <h1> </h1>
     </div>
   </aside>
 
@@ -97,7 +99,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2>Our Work</h2>
+          <h2>Nuestro equipo</h2>
           <hr class="small">
           <div class="row">
             <div class="col-md-6">
