--- a/app/assets/stylesheets/attempt.scss
+++ b/app/assets/stylesheets/attempt.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the attempt controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.attempt-show-container {
+  padding: 20px 0px;
+  textarea {
+    width: 100%;
+    height: 450px;
+  }
+
+  .list-group {
+    max-height: 450px;
+    margin:auto;
+    left:0;
+    right:0;
+   }
+   .lead {
+    margin:auto;
+    left:0;
+    right:0;
+    padding-top:10%;
+   }
+
+   a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus {
+           background-color: rgba(113, 204, 81, 1);
+           border-color: lightgray;
+   }
+
+   p {
+    font-size: 20px;
+    word-wrap: break-word;
+   }
+}
