Cambios paguna de ejercicio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,10 +49,10 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h4>
-              <strong>Start Bootstrap</strong>
+              <strong>ClassRoom Help</strong>
             </h4>
-            <p>3481 Melrose Place
-              <br>Beverly Hills, CA 90210</p>
+            <p>Uniandes
+              </p>
             <hr class="small">
             <p class="text-muted" id="copyright-text">Copyright &copy; Your Website 2017</p>
           </div>
