--- a/app/assets/stylesheets/attempt.scss
+++ b/app/assets/stylesheets/attempt.scss
@@ -30,4 +30,18 @@
     font-size: 20px;
     word-wrap: break-word;
    }
+
+   #step-icon-description {
+     margin-right: 10px;
+   }
+
+   .btn-circle.btn-xl {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
+    background-color: rgba(113, 204, 81, 1);
+    border-color: rgba(113, 204, 81, 1);
+  }
 }
