--- a/app/views/attempt/show.html.erb
+++ b/app/views/attempt/show.html.erb
@@ -24,6 +24,8 @@
       <% end %>
     </div>
   </div>
-  <button type="button" class="btn btn-info btn-circle btn-xl col-md-offset-9"><i class="glyphicon glyphicon-ok"></i></button>
+    <%= link_to attempt_path(Attempt.first._id) , class: "btn btn-info btn-circle btn-xl col-md-offset-9" do %>
+      <i class="glyphicon glyphicon-ok"></i>
+    <% end %>
 </div>
 <hr>
