--- a/app/views/attempt/show.html.erb
+++ b/app/views/attempt/show.html.erb
@@ -4,28 +4,30 @@
   </div>
 </nav>
 <div class="attempt-show-container">
+  <%= form_tag(attempt_check_path, method: :get) do %>
   <div class="row">
     <p class="col-md-offset-2 col-md-7"><%= @attempt.exercise.statement %></p>
   </div>
   <div class="row">
     <div class="col-md-7 col-md-offset-2">
-      <textarea/>
-    </textarea>
+      <%= text_area_tag :user_logic, params[:name] %>
     </div>
     <div class="list-group col-md-2">
-      <!-- Step Completado
-      <a class="list-group-item active">
+      <% @attempt.done_steps.each do |step| %>
+        <a class="list-group-item active">
           <span class="glyphicon glyphicon-list-alt"></span>
-          Paso 1
-      </a> -->
+          <%= step.description %>
+        </a>
+      <% end %>
 
-      <% @attempt.exercise.steps.each do |step| %>
+      <% @attempt.current_steps.each do |step| %>
         <a class="list-group-item"><span class="glyphicon glyphicon-list-alt" id="step-icon-description"></span><%= step.description %></a>
       <% end %>
     </div>
   </div>
-    <%= link_to attempt_path(Attempt.first._id) , class: "btn btn-info btn-circle btn-xl col-md-offset-9" do %>
+    <%= button_tag(type: "submit", class: "btn btn-info btn-circle btn-xl col-md-offset-9") do %>
       <i class="glyphicon glyphicon-ok"></i>
+    <% end %>
     <% end %>
 </div>
 <hr>
