--- a/app/views/subject/index.html.erb
+++ b/app/views/subject/index.html.erb
@@ -18,6 +18,8 @@
   </nav>
 
   <div class="container">
+<h1>CLASES</h1>
+<hr>
   	<div class="row">
   		<div class='list-group gallery'>
         <%- Subject.all.each do |categoria|%>
