added image to exercise

--- a/app/assets/stylesheets/attempt.scss
+++ b/app/assets/stylesheets/attempt.scss
@@ -44,4 +44,9 @@
     background-color: rgba(113, 204, 81, 1);
     border-color: rgba(113, 204, 81, 1);
   }
+
+  #exercise_image {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
