--- a/app/views/attempt/show.html.erb
+++ b/app/views/attempt/show.html.erb
@@ -4,9 +4,15 @@
   </div>
 </nav>
 <div class="attempt-show-container">
+  <% @attempt.errors.each do |attr, msg| %>
+    <h1>asdñlfkjasdflñkjsdaflñkadjsf</h1>
+  <% end %>
   <%= form_tag(attempt_check_path, method: :get) do %>
   <div class="row">
     <p class="col-md-offset-2 col-md-7"><%= @attempt.exercise.statement %></p>
+    <% if @attempt.exercise.image_url %>
+      <%= image_tag @attempt.exercise.image_url, class:"col-md-offset-4 col-md-4", id: "exercise_image" %>
+    <% end %>
   </div>
   <div class="row">
     <div class="col-md-7 col-md-offset-2">
