updated the seeds of the db

--- a/app/views/attempt/feedback.html.erb
+++ b/app/views/attempt/feedback.html.erb
@@ -1,2 +1,9 @@
-<h1>Funciono</h1>
+<h1>Correcto</h1>
+<p class= "text-center"> su desempeño en este ejercicio fue correcto dado
+  <br> que se refleja un manejo en el conocimiento de los temas relacionados
+  <br>con la creacion de clases y los componentes que hacen parte de este proceso,
+  <br> se recomienda seguir trabajando para lograr interiorizar el tema completamente.
+
+</p>
+
 <hr>
