added functionality with the IBM backend

--- a/app/views/attempt/show.html.erb
+++ b/app/views/attempt/show.html.erb
@@ -4,8 +4,8 @@
   </div>
 </nav>
 <div class="attempt-show-container">
-  <% @attempt.errors.each do |attr, msg| %>
-    <h1>asdñlfkjasdflñkjsdaflñkadjsf</h1>
+  <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
   <%= form_tag(attempt_check_path, method: :get) do %>
   <div class="row">
